--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,4 +1,4 @@
-$backgroundColor: #efefef;
+$backgroundColor: #C9ADA7;
 $radius: 40%;
 
 form {
@@ -15,10 +15,10 @@ form {
         cursor: pointer;
         margin-right: 1rem;
         padding: .25rem .5rem;
-        background: #ccc;
+        background: #C9ADA7;
 
         &:hover, &.active {
-          background: #fff;
+          background: #F2E9E4;
         }
       }
     }
